# mazes-for-programmers

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: cell.rs  distances.rs  grid.rs  lib.rs  mask.rs  util.rs
core/src/algorithms/: binarytree.rs  mod.rs  sidewinder.rs
core/src/generators/: aldous_broder.rs  binarytree.rs  binarytree_par.rs  hunt_and_kill.rs  mod.rs  recursive_backtracker.rs  sidewinder.rs  sidewinder_par.rs  wilsons.rs
core/src/solvers/: djikstra.rs  mod.rs
masks/: infinite_loop.mask  test.mask
runner/: Cargo.toml
runner-gui/: Cargo.toml
runner-gui/src/: app.rs  image.rs  main.rs  texture.rs
runner/src/: analysis.rs  main.rs  options.rs
