[package]
name = "runner-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
derivative = "2.2"
derive_more = "0.99"
eframe = "0.15"
strum = { version = "0.22", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.2"

[dependencies.mazecore]
path = "../core"
package = "core"
