[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
argh = "0.1"
derivative = "2.2"
derive_more = "0.99"
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.mazecore]
path = "../core"
package = "core"
